Fix broken submodules and add AIROLAB repos

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "AIRLAB_Telemtry"]
 	path = AIRLAB_Telemtry
 	url = git@github.com:fynnal98/AIRLAB_Telemtry.git
+[submodule "AIROLAB_Flightcontroller"]
+	path = AIROLAB_Flightcontroller
+	url = git@github.com:fynnal98/AIROLAB_Flightcontroller.git
+[submodule "AIROLAB_Telemtry"]
+	path = AIROLAB_Telemtry
+	url = git@github.com:fynnal98/AIROLAB_Telemtry.git
